# ACAproject

./: README.md  docs.md  spiegazione_serializesumcluster.md
MPI-K-Means-Clustering-main/: README.md  hostfile  test_dir.sh
MPI-K-Means-Clustering-main/DataSet/: DataSet100000x10.txt  DataSet10000x10.txt  DataSet10000x5.txt  DataSet1000x10.txt  DataSet1000x2.txt  DataSet1200x10.txt  DataSet1500x10.txt  DataSet1800x10.txt  DataSet2100x10.txt  DataSet2400x10.txt  DataSet2700x10.txt  DataSet30000x10.txt  DataSet3000x10.txt  DataSet3900x10.txt  DataSet40000x10.txt  DataSet4200x10.txt  DataSet4800x10.txt  DataSet50000x10.txt  DataSet5000x10.txt  DataSet5000x30.txt  DataSet500x10.txt  DataSet5100x10.txt  (+11 more)
MPI-K-Means-Clustering-main/Parallel/: 226_centroids_rank_0.txt  CMakeLists.txt  Centroid.cpp  Centroid.h  Cluster.cpp  Cluster.cpp.bak  Cluster.h  Cluster.h.bak  Makefile  Point.cpp  Point.h  Tupla.cpp  Tupla.h  execution_time.txt  gmon.out  gprof_test.sh  kmeans_parallel  kmeans_parallel.cpp  kmeans_parallel_vercopilot.cpp  main  main.cpp  perf.data.old  profiling_report.txt  rank_0.txt  rank_1.txt  rank_2.txt  rank_3.txt  rank_4.txt  rank_5.txt  rank_6.txt  rank_7.txt  results_ex.txt  run_kmeans_test.sh  run_test_kmeans.sh  test_alg_parallel.sh  test_kmeans.txt
MPI-K-Means-Clustering-main/Parallel/DataSet/: dataset_100x2.txt
MPI-K-Means-Clustering-main/Parallel/dataset/: DataSet100x10.txt  execution_time.txt
MPI-K-Means-Clustering-main/Parallel/dump/: kmeans_bk.cpp  kmeans_parallel_w_notes.cpp
MPI-K-Means-Clustering-main/Parallel/uml/: parallel_class_diagram.puml
(+64 files in other folders)
